# MemoryDB

./: .dockerignore  .env.example  .gitignore  COPYRIGHT  Dockerfile  MCP_INTERFACE.md  MEMORY_MCP_API_PROPOSAL_v3.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  smoke_test.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
alembic_v3/: env.py
alembic_v3/versions/: 001_initial_v3_scaffold.py  002_add_consolidation_document_pointer.py  002_core_subject_understanding_schema.py  003_add_observation_links.py  003_sessions_model_tier.py  004_add_named_understandings.py  005_add_last_reviewed_generation.py  006_add_session_entities.py
docker/: download_model.py  entrypoint.sh
docker/initdb/: 01-create-memory-v3.sh
docs/: onboarding.md  session-entities-design.md  session-entities-open-questions.md
docs/seeds/: consolidation.md  protocol.md
scripts/: migrate_json_graph.py  setup.sh  start.sh  test.sh
src/memory_common/: __init__.py  server_host.py
src/memory_mcp/: admin.py  admin_cli.py  app.py  config.py  db.py  embeddings.py  mcp_tools.py  server.py
src/memory_mcp/tools/: consolidation.py  graph.py  nodes.py  observations.py  relations.py  search.py
src/memory_v3/: __init__.py  admin.py  admin_cli.py  app.py  config.py  db.py  embeddings.py  mcp_cli.py  mcp_tools.py  server.py  tools.py
tests/: conftest.py  test_admin.py  test_admin_v3.py  test_consolidation.py  test_embeddings.py  test_graph.py  test_mcp_cli.py  test_nodes.py  test_observations.py  test_relations.py  test_search.py  test_v3_mcp_tools.py  test_workspace_binding.py
