[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.0",
    "pydantic-settings>=2.0.0",
    "sentence-transformers>=3.0.0",
    "einops",
]
# Note: torch is a transitive dependency of sentence-transformers.
# For CUDA on the basement server, install torch separately first:
#   pip install torch --index-url https://download.pytorch.org/whl/cu124

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
memory-mcp = "memory_mcp.server:main"
