[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    "sentence-transformers>=3.0.0",
    "einops",
    "tomli>=2.0.0; python_version < '3.11'",
]
# Note: torch is a transitive dependency of sentence-transformers.
# For CUDA on the basement server, install torch separately first:
#   pip install torch --index-url https://download.pytorch.org/whl/cu124

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[project.scripts]
memory-mcp = "memory_v3.server:main"
memory-admin = "memory_v3.admin_cli:main"
memory-admin-v3 = "memory_v3.admin_cli:main"
memory-mcp-cli = "memory_v3.mcp_cli:main"
